# Minha-Princesa-Animes

./: .gitignore  CHANGELOG.md  README.md  index.html  minha-princesa-animes.key.pub  package-lock.json  package.json  preparar.ps1
src-tauri/: Cargo.toml  _poster_debug.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs  tray.rs
src-tauri/src/db/: cache.rs  mod.rs
src-tauri/src/download/: ffmpeg.rs  hls.rs  mod.rs  naming.rs  notify.rs  poster.rs  process_util.rs  queue.rs  validate.rs  wakelock.rs
src-tauri/src/sources/: mod.rs  registry.rs
src-tauri/src/sources/animesdigital/: client.rs  embed.rs  mod.rs  parser.rs
src-tauri/src/sources/animesonlinecc/: mod.rs
src-tauri/src/sources/dooplay/: blogger.rs  client.rs  config.rs  embed.rs  mod.rs  parser.rs
src-tauri/src/sources/goyabu/: client.rs  embed.rs  mod.rs  parser.rs
src-tauri/src/sources/meusanimes/: mod.rs
src-tauri/src/sources/shared/: stream.rs
src-tauri/src/sources/sushianimes/: mod.rs
src-tauri/src/sushi/: client.rs  embed.rs  mod.rs  parser.rs
src-tauri/target-test/: .rustc_info.json
src-tauri/target-test/debug/.fingerprint/aho-corasick-aa7a03e3c27465da/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-test/debug/.fingerprint/alloc-no-stdlib-f942eb6e35a4ef08/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-test/debug/.fingerprint/alloc-stdlib-bf403664edbc1af8/: lib-alloc_stdlib  lib-alloc_stdlib.json
(+514 files in other folders)
