[package]
name = "minha-princesa-animes"
version = "0.5.0"
description = "Minha Princesa Animes - biblioteca e downloader de animes"
authors = ["Lascone"]
edition = "2021"

[lib]
name = "minha_princesa_animes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "stream"] }
scraper = "0.22"
tokio = { version = "1", features = ["full"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "2"
urlencoding = "2"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
zip = "2"
